--- a/relation-controller/src/main/webapp/WEB-INF/web.xml
+++ b/relation-controller/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	<!-- 配置 Spring 配置文件的位置和名称 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring-beans*.xml</param-value>
+		<param-value>classpath:spring-*.xml</param-value>
 	</context-param>
 	<!-- 配置启动 Spring IOC 容器的 Listener -->
 	<listener>
@@ -25,6 +25,15 @@
 
 	<filter-mapping>
 		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
