--- a/relation-controller/src/main/resources/jdbc.properties
+++ b/relation-controller/src/main/resources/jdbc.properties
@@ -1,5 +1,4 @@
 jdbc.user=root
-jdbc.password=root
+jdbc.password=123456
 jdbc.url=jdbc:mysql://localhost:3306/relation
 jdbc.driverClassName=com.mysql.jdbc.Driver
-
