--- a/relation-controller/src/main/webapp/WEB-INF/web.xml
+++ b/relation-controller/src/main/webapp/WEB-INF/web.xml
@@ -28,14 +28,14 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<filter>
+<!--	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping>-->
 
 	<!-- <filter>
 		<filter-name>shiroFilter</filter-name>
