--- a/pom.xml
+++ b/pom.xml
@@ -304,6 +304,23 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.26-incubating</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+
+
         <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.freemarker/freemarker &ndash;&gt;
         <dependency>
             <groupId>org.freemarker</groupId>
