--- a/pom.xml
+++ b/pom.xml
@@ -361,6 +361,11 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>3.3.9</version>
+        </dependency>
 
 
     </dependencies>
