--- a/relation-controller/pom.xml
+++ b/relation-controller/pom.xml
@@ -61,10 +61,14 @@
                         <artifactId>relation-batch</artifactId>
                         <version>1.0-SNAPSHOT</version>
                     </dependency>
-
+                    <dependency>
+                        <groupId>tk.mybatis</groupId>
+                        <artifactId>mapper</artifactId>
+                        <version>3.3.9</version>
+                    </dependency>
                 </dependencies>
                 <configuration>
-                    <overwrite>true</overwrite>
+                    <overwrite>false</overwrite>
                     <verbose>true</verbose>
                 </configuration>
             </plugin>
